test: add tests for Chatroom and Message model